src/styles.scss
// Open Forms SDK styles
// TODO: we should see if we can re-use even smaller bits to shed dead weight and
// reduce the bundle size
$fa-font-path: '../webfonts/' !default; // vite.config.mts overrides this
@use '@fortawesome/fontawesome-free/scss/fontawesome';
@use '@fortawesome/fontawesome-free/scss/brands' with (
  $fa-font-path: $fa-font-path
);
@use '@fortawesome/fontawesome-free/scss/regular' with (
  $fa-font-path: $fa-font-path
);
@use '@fortawesome/fontawesome-free/scss/solid' with (
  $fa-font-path: $fa-font-path
);
@use 'leaflet/dist/leaflet';
@use '@open-formulieren/formio-renderer/formio-renderer.css';

// output the design tokens under the .openforms-theme classname
@use '@open-formulieren/design-tokens/dist/index';

@use './scss/nl-design-system-community.scss';

@import './scss/settings';
@import './scss/responsive';

// TODO: eventually exclude this from production bundle
@import './scss/components/debug-info';

@import './scss/components/typography';
@import './scss/components/fa-icon';

@import './scss/components/app';
@import './scss/components/anchor';
@import './scss/components/abort-button';
@import './scss/components/button-group';
@import './scss/components/card';
@import './scss/components/children';
@import './scss/components/data-list';
@import './scss/components/image';
@import './scss/components/form-field';
@import './scss/components/form-navigation';
@import './scss/components/input';
@import './scss/components/label';
@import './scss/components/list';
@import './scss/components/textarea';
@import './scss/components/progress-indicator';
@import './scss/components/previous-link';
@import './scss/components/summary-progress';
@import './scss/components/columns';
@import './scss/components/price';
@import './scss/components/co-sign';
@import './scss/components/leaflet-map';
@import './scss/components/start-link';
@import './scss/components/summary';
@import './scss/components/language-selection';
@import './scss/components/login-options';
@import './scss/components/login-button';
@import './scss/components/authentication-errors';
@import './scss/components/govmetric_snippet';

